Closed Bug 1821065 Opened 2 years ago Closed 1 year ago

[PL][x-kom]Form preview/autofill/clear not applied in the eligible fields

Categories

(Toolkit :: Form Autofill, defect, P2)

Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
116 Branch
Tracking Status
firefox-esr102 --- disabled
firefox110 --- disabled
firefox111 --- disabled
firefox112 --- disabled
firefox116 --- verified

People

(Reporter: epopescu, Assigned: dimi)

References

(Blocks 1 open bug, )

Details

(Whiteboard: [fxcm-cc-new-geo])

Attachments

(4 files)

Found in

  • Firefox 111

Affected versions

  • Firefox 111

Tested platforms

  • Affected platforms: Windows 10

Preconditions

  • set pref extensions.formautofill.creditCards.supportedCountries to IT,ES,PL,AT,BE in about:config
  • set pref browser.search.region to PL in about:config
  • use PL VPN
  • have several credit cards saved in about:preferences#privacy

Steps to reproduce

  1. Go to https://www.x-kom.pl/
  2. Add an item to cart and proceed to checkout
  3. Reach the payment page
  4. Click in either the Card Number field

Expected result

  • Form preview/autofill/clear should be applied in the eligible fields.

Actual result

  • Form preview/autofill/clear is not applied in the eligible fields.

Regression range

  • Not a regression because this feature is disabled by default.

Additional notes

Blocks: 1820733
Severity: -- → S3
Has STR: --- → yes

:epopescu, if you think that's a regression, could you try to find a regression range using for example mozregression?

Priority: -- → P2
Whiteboard: [fxcm-cc-new-geo]

This can be fixed by adding
(numer).*(karty) to cc-number regexp and data.*ważności to cc-exp regexp

Assignee: nobody → dlee
Status: NEW → ASSIGNED
Pushed by dlee@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/44dbcc48482e Add expiration date related polish keywords r=mtigley,credential-management-reviewers,sgalich
Keywords: leave-open
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Keywords: leave-open
Resolution: --- → FIXED
Flags: qe-verify+
Duplicate of this bug: 1833625

I'm still able to reproduce this issue in the latest Nightly 115.0a1 (2023-05-23).
Please see the attachment.
Saved page: https://drive.google.com/drive/folders/1Y4SLUsUgfigAjZUSVZY43_Ltp8KUAPvu

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Pushed by dlee@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/51d33b3b5fd3 Sync the label matching heuristics for js and native implementation. r=credential-management-reviewers,sgalich
Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch

Verified as fixed in the latest Nightly 116.0a1 (2023-07-03) version where the issue no longer persists.
However the eligible fields are not highlighted when previewed or autofilled. For this issue I've filed Bug 1841529. Thanks.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: