Bug 1821065 - Sync the label matching heuristics for js and native implementation. r=credential-management-reviewers,sgalich

In the label matching heuristic, we should not bail out when there is
no label. See
https://searchfox.org/mozilla-central/rev/d307d4d9f06dab6d16e963a4318e5e8ff4899141/toolkit/components/formautofill/shared/CreditCardRuleset.sys.mjs#418-423

Differential Revision: https://phabricator.services.mozilla.com/D181957